# tgstickbot

./: .env.template  .gitignore  Cargo.toml  README.md  docker-compose.yml  stickers.db
src/: main.rs
