[package]
name = "tgstickbot"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
dotenv = "0.15"
bitranslit = "0.3.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
image = "0.23.14"
reqwest = "0.11"
futures = "0.3"
